<resources>
    <string name="app_name">Lab2</string>
    <string name="title">中山大学课外体育积分电子认证系统</string>
    <string name="user">用户名：</string>
    <string name="password">密码：</string>

    <string name="userHint">请输入用户名</string>
    <string name="passwdHint">请输入密码</string>
    <string name="radioText1">学生</string>
    <string name="radioText2">老师</string>
    <string name="radioText3">社团</string>
    <string name="radioText4">管理者</string>

    <string name="buttonText1">登录</string>
    <string name="buttonText2">注册</string>
    <string name="sysu">sysu</string>


</resources>
